Fixed #5. Added internationalization for the msie.jsp page.

--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
@@ -70,6 +70,10 @@ login.label.user_not_logined      = Please, sign in.
 login.label.username              = username
 login.title                       = Sign In
 
+# msie.jsp
+msie.label.advice = But rather to install a really good browser:
+msie.label.gtfoh  = You Are Using Internet Explorer! Get The Fuck Outta Here!
+
 # publicRoom.jsp
 public_room.label.author_name   = author's name:
 public_room.label.captcha       = Type in the text seen on the picture:
