--- a/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
@@ -19,7 +19,7 @@ ban_user.username.pattern    = The username is incorrect.
 
 # CommentDto
 comment.body.length   = The comment's length must be between {min} and {max} characters long.
-comment.body.not_null = The comment cannot be empty.
+comment.body.not_null = Please type your comment.
 
 # NewsDto
 news.body.length        = The news' length must be between {min} and {max} characters long.
@@ -33,24 +33,24 @@ public_message.author.length   = The length of the author's name must be between
 public_message.author.not_null = Please type the author's name of the message.
 public_message.author.pattern  = The author's name can only contain English, Russian and Ukrainian characters, digits and the _ (underscore).
 public_message.body.length     = The message's length must be between {min} and {max} characters long.
-public_message.body.not_null   = The message cannot be empty.
+public_message.body.not_null   = Please type your message.
 
 # RegisterUserDto
 register_user.day.pattern           = Incorrect Date of Birth.
 register_user.email.duplicate       = The user with this email already exists.
 register_user.email.pattern         = The wrong email format. The correct email address is example@gmail.com
 register_user.first_name.length     = The First Name length must be between {min} and {max} characters long.
-register_user.first_name.not_null   = The First Name cannot be empty.
+register_user.first_name.not_null   = Please type your First Name.
 register_user.first_name.pattern    = The First Name can only contain English, Russian and Ukrainian characters.
 register_user.last_name.length      = The Last Name length must be between {min} and {max} characters long.
-register_user.last_name.not_null    = The Last Name cannot be empty.
+register_user.last_name.not_null    = Please type your Last Name.
 register_user.last_name.pattern     = The Last Name can only contain English, Russian and Ukrainian characters.
 register_user.month.pattern         = Incorrect Date of Birth.
 register_user.password.confirmation = The passwords are not match.
 register_user.password.length       = The password's length must be between {min} and {max} characters long.
-register_user.password.not_null     = The password cannot be empty.
+register_user.password.not_null     = Please type a password.
 register_user.username.duplicate    = The user with this username already exists.
 register_user.username.length       = The username's length must be between {min} and {max} characters long.
-register_user.username.not_null     = The username cannot be empty.
+register_user.username.not_null     = Please type a username.
 register_user.username.pattern      = The username can only contain English, Russian and Ukrainian characters, digits and the _ (underscore).
 register_user.year.pattern          = Incorrect Date of Birth.
