Fixed #20. Added CAPTCHA validation for PublicMessage.

--- a/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
@@ -34,6 +34,7 @@ public_message.author.not_null = Please type the author's name of the message.
 public_message.author.pattern  = The author's name can only contain English, Russian and Ukrainian characters, digits and the _ (underscore).
 public_message.body.length     = The message's length must be between {min} and {max} characters long.
 public_message.body.not_null   = Please type your message.
+public_message.captcha.wrong   = Wrong CAPTCHA!
 
 # RegisterUserDto
 register_user.day.pattern           = Incorrect Date of Birth.
