--- a/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
@@ -37,7 +37,7 @@ public_message.body.not_null   = Please type your message.
 public_message.captcha.wrong   = Wrong CAPTCHA!
 
 # RegisterUserDto
-register_user.day.pattern           = Incorrect Date of Birth.
+register_user.day.pattern           = The wrong day of birth.
 register_user.email.duplicate       = The user with this email already exists.
 register_user.email.pattern         = The wrong email format. The correct email address is example@gmail.com
 register_user.first_name.length     = The First Name length must be between {min} and {max} characters long.
@@ -46,7 +46,8 @@ register_user.first_name.pattern    = The First Name can only contain English, R
 register_user.last_name.length      = The Last Name length must be between {min} and {max} characters long.
 register_user.last_name.not_null    = Please type your Last Name.
 register_user.last_name.pattern     = The Last Name can only contain English, Russian and Ukrainian characters.
-register_user.month.pattern         = Incorrect Date of Birth.
+register_user.license.not_accepted  = License agreement must be accepted.
+register_user.month.pattern         = The wrong month of birth
 register_user.password.confirmation = The passwords are not match.
 register_user.password.length       = The password's length must be between {min} and {max} characters long.
 register_user.password.not_null     = Please type a password.
@@ -54,4 +55,4 @@ register_user.username.duplicate    = The user with this username already exists
 register_user.username.length       = The username's length must be between {min} and {max} characters long.
 register_user.username.not_null     = Please type a username.
 register_user.username.pattern      = The username can only contain English, Russian and Ukrainian characters, digits and the _ (underscore).
-register_user.year.pattern          = Incorrect Date of Birth.
+register_user.year.pattern          = The wrong year of birth
