Fixed #7. Renamed the publicRoom.jsp page to anonymousRoom.jsp

--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
@@ -27,6 +27,14 @@ add_news.label.news_importance.minor        = minor
 add_news.label.title                        = title
 add_news.title                              = Add a News
 
+# anonymousRoom.jsp
+anonymous_room.label.author_name   = author's name:
+anonymous_room.label.captcha       = Type in the text seen on the picture:
+anonymous_room.label.leave_message = leave a message
+anonymous_room.label.message       = message:
+anonymous_room.label.messages      = Messages
+anonymous_room.title               = Anonymous Room
+
 # articles.jsp
 articles.label.articles_on_page = articles on the page:
 articles.title                  = Articles
@@ -74,14 +82,6 @@ login.title                       = Sign In
 msie.label.advice = But rather to install a really good browser:
 msie.label.gtfoh  = You Are Using Internet Explorer! Get The Fuck Outta Here!
 
-# publicRoom.jsp
-public_room.label.author_name   = author's name:
-public_room.label.captcha       = Type in the text seen on the picture:
-public_room.label.leave_message = leave a message
-public_room.label.message       = message:
-public_room.label.messages      = Messages
-public_room.title               = Public Room
-
 # registration.jsp
 registration.button.sign_up         = sign up
 registration.label.accept_the_terms = I accept the terms
@@ -97,12 +97,12 @@ registration.label.username         = username
 registration.title                  = Sign Up
 
 # siderbar.jsp
-siderbar.link.add_article  = add an article
-siderbar.link.add_news     = add a news
-siderbar.link.all_articles = all articles
-siderbar.link.main         = main
-siderbar.link.public_room  = public room
-siderbar.link.users        = users
+siderbar.link.add_article    = add an article
+siderbar.link.add_news       = add a news
+siderbar.link.all_articles   = all articles
+siderbar.link.anonymous_room = anonymous room
+siderbar.link.main           = main
+siderbar.link.users          = users
 
 # successfulRegistration.jsp
 successful_registration.label.success = You was successfully registered. Please check your email for the activation link.
