--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -27,6 +27,14 @@ add_news.label.news_importance.minor        = \u043D\u0435\u0437\u043D\u0430\u04
 add_news.label.title                        = \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 add_news.title                              = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
 
+# anonymousRoom.jsp
+anonymous_room.label.author_name   = \u0438\u043C\u044F \u0430\u0432\u0442\u043E\u0440\u0430:
+anonymous_room.label.captcha       = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0442\u0435\u043A\u0441\u0442, \u043A\u043E\u0442\u043E\u0440\u043E\u0435 \u0432\u044B \u0432\u0438\u0434\u0438\u0442\u0435 \u043D\u0430 \u043A\u0430\u0440\u0442\u0438\u043D\u043A\u0435:
+anonymous_room.label.leave_message = \u043E\u0441\u0442\u0430\u0432\u0438\u0442\u044C \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435
+anonymous_room.label.message       = \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u043D\u0438\u0435:
+anonymous_room.label.messages      = \u0421\u043E\u043E\u0431\u0449\u0435\u043D\u043D\u0438\u044F
+anonymous_room.title               = \u0410\u043D\u043E\u043D\u0438\u043C\u043D\u0430\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u0430
+
 # articles.jsp
 articles.label.articles_on_page = \u0441\u0442\u0430\u0442\u0435\u0439 \u043D\u0430 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435:
 articles.title                  = \u0421\u0442\u0430\u0442\u044C\u0438
@@ -74,14 +82,6 @@ login.title                       = \u0412\u043E\u0439\u0442\u0438
 msie.label.advice = \u0410 \u043B\u0443\u0447\u0448\u0435 \u0443\u0441\u0442\u0430\u043D\u043E\u0432\u0438 \u0441\u0435\u0431\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0440\u043E\u0448\u0438\u0439 \u0431\u0440\u0430\u0443\u0437\u0435\u0440:
 msie.label.gtfoh  = \u041F\u043E\u043B\u044C\u0437\u0443\u0435\u0448\u044C\u0441\u044F Internet Explorer?! \u041F\u043E\u0448\u0435\u043B \u043D\u0430 \u0445\u0443\u0439 \u043E\u0442\u0441\u044E\u0434\u0430!
 
-# publicRoom.jsp
-public_room.label.author_name   = \u0438\u043C\u044F \u0430\u0432\u0442\u043E\u0440\u0430:
-public_room.label.captcha       = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0442\u0435\u043A\u0441\u0442, \u043A\u043E\u0442\u043E\u0440\u043E\u0435 \u0432\u044B \u0432\u0438\u0434\u0438\u0442\u0435 \u043D\u0430 \u043A\u0430\u0440\u0442\u0438\u043D\u043A\u0435:
-public_room.label.leave_message = \u043E\u0441\u0442\u0430\u0432\u0438\u0442\u044C \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435
-public_room.label.message       = \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u043D\u0438\u0435:
-public_room.label.messages      = \u0421\u043E\u043E\u0431\u0449\u0435\u043D\u043D\u0438\u044F
-public_room.title               = \u041F\u0443\u0431\u043B\u0438\u0447\u043D\u0430\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u0430
-
 # registration.jsp
 registration.button.sign_up         = \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
 registration.label.accept_the_terms = \u042F \u0441\u043E\u0433\u043B\u0430\u0441\u0435\u043D \u0441 \u0443\u0441\u043B\u043E\u0432\u0438\u044F\u043C\u0438
@@ -97,12 +97,12 @@ registration.label.username         = \u0438\u043C\u044F \u043F\u043E\u043B\u044
 registration.title                  = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 
 # siderbar.jsp
-siderbar.link.add_article  = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0442\u0430\u0442\u0442\u044E
-siderbar.link.add_news     = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
-siderbar.link.all_articles = \u0432\u0441\u0435 \u0441\u0442\u0430\u0442\u044C\u0438\u0097
-siderbar.link.main         = \u0433\u043B\u0430\u0432\u043D\u0430\u044F
-siderbar.link.public_room  = \u043F\u0443\u0431\u043B\u0438\u0447\u043D\u0430\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u0430
-siderbar.link.users        = \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+siderbar.link.add_article    = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0442\u0430\u0442\u0442\u044E
+siderbar.link.add_news       = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
+siderbar.link.all_articles   = \u0432\u0441\u0435 \u0441\u0442\u0430\u0442\u044C\u0438\u0097
+siderbar.link.anonymous_room = \u0430\u043D\u043E\u043D\u0438\u043C\u043D\u0430\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u0430
+siderbar.link.main           = \u0433\u043B\u0430\u0432\u043D\u0430\u044F
+siderbar.link.users          = \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 
 # successfulRegistration.jsp
 successful_registration.label.success = \u0412\u044B \u0431\u044B\u043B\u0438 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u0440\u043E\u0432\u0435\u0440\u044C\u0442\u0435 \u0441\u0432\u043E\u0439 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u044B\u0439 \u044F\u0449\u0438\u043A, \u043D\u0430 \u043A\u043E\u0442\u043E\u0440\u044B\u0439 \u0431\u044B\u043B\u043E \u0432\u044B\u0441\u043B\u0430\u043D\u043E \u043F\u0438\u0441\u044C\u043C\u043E \u0441\u043E \u0441\u0441\u044B\u043B\u043A\u043E\u0439, \u043A\u043E\u0442\u043E\u0440\u0430\u044F \u0430\u043A\u0442\u0438\u0432\u0438\u0437\u0438\u0440\u0443\u0435\u0442 \u0432\u0430\u0448 \u0430\u043A\u043A\u0430\u0443\u043D\u0442.
