--- a/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
@@ -1,4 +1,12 @@
 
+# AnonymousMessageDto
+anonymous_message.author.length   = The length of the author's name must be between {min} and {max} characters long.
+anonymous_message.author.not_null = Please type the author's name of the message.
+anonymous_message.author.pattern  = The author's name can only contain English, Russian and Ukrainian characters, digits and the _ (underscore).
+anonymous_message.body.length     = The message's length must be between {min} and {max} characters long.
+anonymous_message.body.not_null   = Please type your message.
+anonymous_message.captcha.wrong   = Wrong CAPTCHA!
+
 # ArticleDto
 article.body.length       = The body's length must be between {min} and {max} characters long.
 article.body.not_null     = Please type the article's body.
@@ -27,14 +35,6 @@ news.body.not_null      = Please type the news' body.
 news.importance.pattern = The importance of news is wrong.
 news.title.length       = The title's length must be between {min} and {max} characters long.
 news.title.not_null     = Please type the news' title.
-
-# PublicMessageDto
-public_message.author.length   = The length of the author's name must be between {min} and {max} characters long.
-public_message.author.not_null = Please type the author's name of the message.
-public_message.author.pattern  = The author's name can only contain English, Russian and Ukrainian characters, digits and the _ (underscore).
-public_message.body.length     = The message's length must be between {min} and {max} characters long.
-public_message.body.not_null   = Please type your message.
-public_message.captcha.wrong   = Wrong CAPTCHA!
 
 # RegisterUserDto
 register_user.day.pattern           = The wrong day of birth.
