--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -27,6 +27,14 @@ add_news.label.news_importance.minor        = \u043D\u0435\u0437\u043D\u0430\u04
 add_news.label.title                        = \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 add_news.title                              = \u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
 
+# anonymousRoom.jsp
+anonymous_room.label.author_name   = \u0456\u043C'\u044F \u0430\u0432\u0442\u043E\u0440\u0430:
+anonymous_room.label.captcha       = \u0412\u0432\u0435\u0434\u0456\u0442\u044C \u0442\u0435\u043A\u0441\u0442, \u044F\u043A\u0435 \u0432\u0438 \u0431\u0430\u0447\u0438\u0442\u0435 \u043D\u0430 \u043A\u0430\u0440\u0442\u0438\u043D\u0446\u0456:
+anonymous_room.label.leave_message = \u0437\u0430\u043B\u0438\u0448\u0438\u0442\u0438 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
+anonymous_room.label.message       = \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F:
+anonymous_room.label.messages      = \u041F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
+anonymous_room.title               = \u0410\u043D\u043E\u043D\u0456\u043C\u043D\u0430 \u043A\u0456\u043C\u043D\u0430\u0442\u0430
+
 # articles.jsp
 articles.label.articles_on_page = \u0441\u0442\u0430\u0442\u0435\u0439 \u043D\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u0446\u0456:
 articles.title                  = \u0421\u0442\u0430\u0442\u0442\u0456
@@ -74,14 +82,6 @@ login.title                       = \u0423\u0432\u0456\u0439\u0442\u0438
 msie.label.advice = \u0410 \u043A\u0440\u0430\u0449\u0435 \u0432\u0441\u0442\u0430\u043D\u043E\u0432\u0438 \u0441\u043E\u0431\u0456 \u0434\u0456\u0439\u0441\u043D\u043E \u0445\u043E\u0440\u043E\u0448\u0438\u0439 \u0431\u0440\u0430\u0443\u0437\u0435\u0440:
 msie.label.gtfoh  = \u0412\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0454\u0448 Internet Explorer?! \u041F\u0456\u0448\u043E\u0432 \u043D\u0430 \u0445\u0443\u0439 \u0437\u0432\u0456\u0434\u0441\u0438!
 
-# publicRoom.jsp
-public_room.label.author_name   = \u0456\u043C'\u044F \u0430\u0432\u0442\u043E\u0440\u0430:
-public_room.label.captcha       = \u0412\u0432\u0435\u0434\u0456\u0442\u044C \u0442\u0435\u043A\u0441\u0442, \u044F\u043A\u0435 \u0432\u0438 \u0431\u0430\u0447\u0438\u0442\u0435 \u043D\u0430 \u043A\u0430\u0440\u0442\u0438\u043D\u0446\u0456:
-public_room.label.leave_message = \u0437\u0430\u043B\u0438\u0448\u0438\u0442\u0438 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
-public_room.label.message       = \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F:
-public_room.label.messages      = \u041F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
-public_room.title               = \u041F\u0443\u0431\u043B\u0456\u0447\u043D\u0430 \u043A\u0456\u043C\u043D\u0430\u0442\u0430
-
 # registration.jsp
 registration.button.sign_up         = \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044F
 registration.label.accept_the_terms = \u042F \u0437\u0433\u043E\u0434\u0435\u043D \u0437 \u0443\u043C\u043E\u0432\u0430\u043C\u0438
@@ -97,12 +97,12 @@ registration.label.username         = \u0456\u043C'\u044F \u043A\u043E\u0440\u04
 registration.title                  = \u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
 
 # siderbar.jsp
-siderbar.link.add_article  = \u0434\u043E\u0434\u0430\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u044E
-siderbar.link.add_news     = \u0434\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
-siderbar.link.all_articles = \u0432\u0441\u0456 \u0441\u0442\u0430\u0442\u0442\u0456\u0097
-siderbar.link.main         = \u0433\u043E\u043B\u043E\u0432\u043D\u0430
-siderbar.link.public_room  = \u043F\u0443\u0431\u043B\u0456\u0447\u043D\u0430 \u043A\u0456\u043C\u043D\u0430\u0442\u0430
-siderbar.link.users        = \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+siderbar.link.add_article    = \u0434\u043E\u0434\u0430\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u044E
+siderbar.link.add_news       = \u0434\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
+siderbar.link.all_articles   = \u0432\u0441\u0456 \u0441\u0442\u0430\u0442\u0442\u0456\u0097
+siderbar.link.anonymous_room = \u0430\u043D\u043E\u043D\u0456\u043C\u043D\u0430 \u043A\u0456\u043C\u043D\u0430\u0442\u0430
+siderbar.link.main           = \u0433\u043E\u043B\u043E\u0432\u043D\u0430
+siderbar.link.users          = \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 
 # successfulRegistration.jsp
 successful_registration.label.success = \u0412\u0438 \u0431\u0443\u043B\u0438 \u0443\u0441\u043F\u0456\u0448\u043D\u043E \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u043E\u0432\u0430\u043D\u0456. \u0411\u0443\u0434\u044C-\u043B\u0430\u0441\u043A\u0430 \u043F\u0435\u0440\u0435\u0432\u0456\u0440\u0442\u0435 \u0441\u0432\u043E\u044E \u0435\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0443 \u0441\u043A\u0440\u0438\u043D\u044C\u043A\u0443, \u043D\u0430 \u044F\u043A\u0443 \u0431\u0443\u0432 \u0432\u0438\u0441\u043B\u0430\u043D\u0438\u0439 \u043B\u0438\u0441\u0442 \u0456\u0437 \u043F\u043E\u0441\u0438\u043B\u0430\u043D\u043D\u044F\u043C, \u0449\u043E \u0430\u043A\u0442\u0438\u0432\u0456\u0437\u0443\u0454 \u0432\u0430\u0448 \u0430\u043A\u0430\u0443\u043D\u0442.
