--- a/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
@@ -29,6 +29,14 @@ ban_user.username.pattern    = The username is incorrect.
 comment.body.length   = The comment's length must be between {min} and {max} characters long.
 comment.body.not_null = Please type your comment.
 
+# HubDto
+hub.description.length   = The description's length must be between {min} and {max} characters long.
+hub.description.not_null = Please type the hub's description.
+hub.name.duplicate       = The hub with this name already exists.
+hub.name.length          = The name's length must be between {min} and {max} characters long.
+hub.name.not_null        = Please type the hub's name.
+hub.type.not_null        = Please select the hub's type.
+
 # NewsDto
 news.body.length        = The news' length must be between {min} and {max} characters long.
 news.body.not_null      = Please type the news' body.
