Added 'AddHub' controller and its view.

--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
@@ -17,6 +17,16 @@ add_article.label.preview      = preview:
 add_article.label.title        = title:
 add_article.title              = Add an article
 
+# addHub.jsp
+add_hub.button.add_hub        = add a hub
+add_hub.hint.hub_type         = the hub can be public or private. If it's public - anyone can add articles to it, if it's private - only the author
+add_hub.label.hub_description = hub description:
+add_hub.label.hub_name        = hub name:
+add_hub.label.hub_type        = hub type:
+add_hub.label.private_type    = private
+add_hub.label.public_type     = public
+add_hub.title                 = Add a Hub
+
 # addNews.jsp
 add_news.button.add_news                    = add a news
 add_news.label.body                         = body
