--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -17,6 +17,15 @@ add_article.label.preview      = \u043F\u0440\u0435\u0434\u0432\u0430\u0440\u043
 add_article.label.title        = \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A:
 add_article.title              = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0442\u0430\u0442\u0442\u044E
 
+add_hub.button.add_hub        = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0445\u0430\u0431
+add_hub.hint.hub_type         = \u0445\u0430\u0431 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0443\u0431\u043B\u0438\u0447\u043D\u044B\u043C \u0438\u043B\u0438 \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u044C\u043D\u044B\u043C. \u0415\u0441\u043B\u0438 \u043E\u043D \u043F\u0443\u0431\u043B\u0438\u0447\u043D\u044B\u0439 - \u043A\u0430\u0436\u0434\u044B\u0439 \u043C\u043E\u0436\u0435\u0442 \u0434\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C \u0441\u0442\u0430\u0442\u044C\u0438, \u0435\u0441\u043B\u0438 \u043E\u043D \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u044C\u043D\u044B\u0439 - \u0442\u043E\u043B\u044C\u043A\u043E \u0430\u0432\u0442\u043E\u0440
+add_hub.label.hub_description = \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0445\u0430\u0431\u0430:
+add_hub.label.hub_name        = \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0445\u0430\u0431\u0430:
+add_hub.label.hub_type        = \u0442\u0438\u043F \u0445\u0430\u0431\u0430:
+add_hub.label.personal_type   = \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u044C\u043D\u044B\u0439
+add_hub.label.public_type     = \u043F\u0443\u0431\u043B\u0438\u0447\u043D\u044B\u0439
+add_hub.title                 = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0445\u0430\u0431
+
 # addNews.jsp
 add_news.button.add_news                    = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
 add_news.label.body                         = \u0442\u0435\u043A\u0441\u0442
