Added the ability to select a hub.

--- a/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/ValidationMessages_en.properties
@@ -8,14 +8,15 @@ anonymous_message.body.not_null   = Please type your message.
 anonymous_message.captcha.wrong   = Wrong CAPTCHA!
 
 # ArticleDto
-article.body.length       = The body's length must be between {min} and {max} characters long.
-article.body.not_null     = Please type the article's body.
-article.keywords.length   = The keywords' length must be between {min} and {max} characters long.
-article.keywords.not_null = Please type the article's keywords.
-article.preview.length    = The preview's length must be between {min} and {max} characters long.
-article.preview.not_null  = Please type the article's preview.
-article.title.length      = The title's length must be between {min} and {max} characters long.
-article.title.not_null    = Please type the article's title.
+article.body.length         = The body's length must be between {min} and {max} characters long.
+article.body.not_null       = Please type the article's body.
+article.hub_name.not_exists = Selected hub not exists.
+article.keywords.length     = The keywords' length must be between {min} and {max} characters long.
+article.keywords.not_null   = Please type the article's keywords.
+article.preview.length      = The preview's length must be between {min} and {max} characters long.
+article.preview.not_null    = Please type the article's preview.
+article.title.length        = The title's length must be between {min} and {max} characters long.
+article.title.not_null      = Please type the article's title.
 
 # BanUserDto
 ban_user.ban_length.pattern  = The ban length is incorrect.
