--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -12,8 +12,10 @@ add_article.button.add_article = add an article
 add_article.hint.keywords      = the keywords (comma separated) of this article. Articles will be look up by these keywords. E.g "final 2013", "sport", "football"
 add_article.hint.preview       = the text which will be displayed at page of articles. Usually it's the first paragraph (4-5 sentences)
 add_article.label.body         = body:
+add_article.label.create_hub   = or create new
 add_article.label.keywords     = keywords:
 add_article.label.preview      = preview:
+add_article.label.select_hub   = select a hub:
 add_article.label.title        = title:
 add_article.title              = Add an article
 
