--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -53,14 +53,14 @@ articles.title                  = \u0421\u0442\u0430\u0442\u0442\u0456
 # displayArticle.jsp
 display_article.label.comment       = \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440:
 display_article.label.comments      = \u041A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456
-display_article.label.edit_article  = \u0440\u0435\u0434\u0430\u043A\u0442\u0443\u0432\u0430\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u044E
+display_article.label.edit_article  = \u0440\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u044E
 display_article.label.keywords      = \u041A\u043B\u044E\u0447\u043E\u0432\u0456 \u0441\u043B\u043E\u0432\u0430
 display_article.label.leave_comment = \u0437\u0430\u043B\u0438\u0448\u0438\u0442\u0438 \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440
 
 # editArticle.jsp
 edit_article.button.update_article              = \u043E\u0431\u043D\u043E\u0432\u0438\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u044E
 edit_article.label.article_successfully_updated = \u0421\u0442\u0430\u0442\u0442\u044F \u0431\u0443\u043B\u0430 \u0443\u0441\u043F\u0456\u0448\u043D\u043E \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u043D\u0430.
-edit_article.label.disable_edit_article         = \u0421\u0442\u0430\u0442\u0442\u044E \u043C\u043E\u0436\u043D\u0430 \u0440\u0435\u0434\u0430\u043A\u0442\u0443\u0432\u0430\u0442\u0438 \u043B\u0438\u0448\u0435 \u043F\u0440\u043E\u0442\u044F\u0433\u043E\u043C \u0433\u043E\u0434\u0438\u043D\u0438 \u043F\u0456\u0441\u043B\u044F \u043F\u0443\u0431\u043B\u0456\u043A\u0430\u0446\u0456\u0457.
+edit_article.label.disable_edit_article         = \u0421\u0442\u0430\u0442\u0442\u044E \u043C\u043E\u0436\u043D\u0430 \u0440\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043B\u0438\u0448\u0435 \u043F\u0440\u043E\u0442\u044F\u0433\u043E\u043C \u0433\u043E\u0434\u0438\u043D\u0438 \u043F\u0456\u0441\u043B\u044F \u043F\u0443\u0431\u043B\u0456\u043A\u0430\u0446\u0456\u0457.
 
 # feedback.jsp
 feedback.title = \u0417\u0432\u043E\u0440\u043E\u0442\u043D\u0456\u0439 \u0437\u0432'\u044F\u0437\u043E\u043A
