Added internationalization and 'hubs' item to the sidebar.

--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
@@ -76,6 +76,10 @@ header.link.sign_in          = sign in
 header.link.sign_out         = sign out
 header.link.sign_up          = sign up
 
+# hubs.jsp
+hubs.label.description = description
+hubs.title             = Hubs
+
 # index.jsp
 index.label.latest_news           = The latest news
 index.label.most_popular_articles = The most popular articles
@@ -113,6 +117,7 @@ siderbar.link.add_article    = add an article
 siderbar.link.add_news       = add a news
 siderbar.link.all_articles   = all articles
 siderbar.link.anonymous_room = anonymous room
+siderbar.link.hubs           = hubs
 siderbar.link.main           = main
 siderbar.link.users          = users
 
