--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -75,6 +75,10 @@ header.link.sign_in          = \u0432\u043E\u0439\u0442\u0438
 header.link.sign_out         = \u0432\u044B\u0439\u0442\u0438
 header.link.sign_up          = \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 
+# hubs.jsp
+hubs.label.description = \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+hubs.title             = \u0425\u0430\u0431\u044B
+
 # index.jsp
 index.label.latest_news           = \u041F\u043E\u0441\u043B\u0435\u0434\u043D\u0438\u0435 \u043D\u043E\u0432\u043E\u0441\u0442\u0438
 index.label.most_popular_articles = \u0421\u0430\u043C\u044B\u0435 \u043F\u043E\u043F\u0443\u043B\u044F\u0440\u043D\u044B\u0435 \u0441\u0442\u0430\u0442\u044C\u0438
@@ -112,6 +116,7 @@ siderbar.link.add_article    = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C 
 siderbar.link.add_news       = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
 siderbar.link.all_articles   = \u0432\u0441\u0435 \u0441\u0442\u0430\u0442\u044C\u0438\u0097
 siderbar.link.anonymous_room = \u0430\u043D\u043E\u043D\u0438\u043C\u043D\u0430\u044F \u043A\u043E\u043C\u043D\u0430\u0442\u0430
+siderbar.link.hubs           = \u0445\u0430\u0431\u044B
 siderbar.link.main           = \u0433\u043B\u0430\u0432\u043D\u0430\u044F
 siderbar.link.users          = \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 
