--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -75,6 +75,10 @@ header.link.sign_in          = \u0443\u0432\u0456\u0439\u0442\u0438
 header.link.sign_out         = \u0432\u0438\u0439\u0442\u0438
 header.link.sign_up          = \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
 
+# hubs.jsp
+hubs.label.description = \u043E\u043F\u0438\u0441
+hubs.title             = \u0425\u0430\u0431\u0438
+
 # index.jsp
 index.label.latest_news           = \u041E\u0441\u0442\u0430\u043D\u043D\u0456 \u043D\u043E\u0432\u0438\u043D\u0438
 index.label.most_popular_articles = \u041D\u0430\u0439\u0431\u0456\u043B\u044C\u0448 \u043F\u043E\u043F\u0443\u043B\u044F\u0440\u043D\u0456 \u0441\u0442\u0430\u0442\u0442\u0456
@@ -112,6 +116,7 @@ siderbar.link.add_article    = \u0434\u043E\u0434\u0430\u0442\u0438 \u0441\u0442
 siderbar.link.add_news       = \u0434\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
 siderbar.link.all_articles   = \u0432\u0441\u0456 \u0441\u0442\u0430\u0442\u0442\u0456\u0097
 siderbar.link.anonymous_room = \u0430\u043D\u043E\u043D\u0456\u043C\u043D\u0430 \u043A\u0456\u043C\u043D\u0430\u0442\u0430
+siderbar.link.hubs           = \u0445\u0430\u0431\u0438
 siderbar.link.main           = \u0433\u043E\u043B\u043E\u0432\u043D\u0430
 siderbar.link.users          = \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 
