Fixed #42. Added messages for the case when the page has no posts.

--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -39,23 +39,26 @@ add_news.label.title                        = title
 add_news.title                              = Add a News
 
 # anonymousRoom.jsp
-anonymous_room.label.author_name   = author's name:
-anonymous_room.label.captcha       = Type in the text seen on the picture:
-anonymous_room.label.leave_message = leave a message
-anonymous_room.label.message       = message:
-anonymous_room.label.messages      = Messages
-anonymous_room.title               = Anonymous Room
+anonymous_room.label.author_name      = author's name:
+anonymous_room.label.captcha          = Type in the text seen on the picture:
+anonymous_room.label.have_no_messages = There are no messages yet, why not be the first.
+anonymous_room.label.leave_message    = leave a message
+anonymous_room.label.message          = message:
+anonymous_room.label.messages         = Messages
+anonymous_room.title                  = Anonymous Room
 
 # articles.jsp
 articles.label.articles_on_page = articles on the page:
+articles.label.have_no_articles = There are no articles yet, why not be the first.
 articles.title                  = Articles
 
 # displayArticle.jsp
-display_article.label.comment       = comment:
-display_article.label.comments      = Comments
-display_article.label.edit_article  = edit an article
-display_article.label.keywords      = Keywords
-display_article.label.leave_comment = leave a comment
+display_article.label.comment          = comment:
+display_article.label.comments         = Comments
+display_article.label.edit_article     = edit an article
+display_article.label.have_no_comments = There are no comments yet, why not be the first.
+display_article.label.keywords         = Keywords
+display_article.label.leave_comment    = leave a comment
 
 # editArticle.jsp
 edit_article.button.update_article              = update an article
@@ -76,8 +79,9 @@ header.link.sign_out         = sign out
 header.link.sign_up          = sign up
 
 # hubs.jsp
-hubs.label.description = description
-hubs.title             = Hubs
+hubs.label.description  = description
+hubs.label.have_no_hubs = There are no hubs yet, why not be the first.
+hubs.title              = Hubs
 
 # index.jsp
 index.label.latest_news           = The latest news
@@ -137,6 +141,7 @@ users.label.ban_expiration_date = ban expiration date:
 users.label.ban_length          = the length of the ban in days:
 users.label.ban_reason          = the ban reason:
 users.label.birthday            = birthday:
+users.label.have_no_users       = There are no users yet, why not be the first.
 users.label.last_login_time     = last login time:
 users.label.posted_articles     = posted articles:
 users.label.posted_comments     = posted comments:
