--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -39,23 +39,26 @@ add_news.label.title                        = \u0437\u0430\u0433\u043E\u043B\u04
 add_news.title                              = \u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
 
 # anonymousRoom.jsp
-anonymous_room.label.author_name   = \u0456\u043C'\u044F \u0430\u0432\u0442\u043E\u0440\u0430:
-anonymous_room.label.captcha       = \u0412\u0432\u0435\u0434\u0456\u0442\u044C \u0442\u0435\u043A\u0441\u0442, \u044F\u043A\u0435 \u0432\u0438 \u0431\u0430\u0447\u0438\u0442\u0435 \u043D\u0430 \u043A\u0430\u0440\u0442\u0438\u043D\u0446\u0456:
-anonymous_room.label.leave_message = \u0437\u0430\u043B\u0438\u0448\u0438\u0442\u0438 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
-anonymous_room.label.message       = \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F:
-anonymous_room.label.messages      = \u041F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
-anonymous_room.title               = \u0410\u043D\u043E\u043D\u0456\u043C\u043D\u0430 \u043A\u0456\u043C\u043D\u0430\u0442\u0430
+anonymous_room.label.author_name      = \u0456\u043C'\u044F \u0430\u0432\u0442\u043E\u0440\u0430:
+anonymous_room.label.captcha          = \u0412\u0432\u0435\u0434\u0456\u0442\u044C \u0442\u0435\u043A\u0441\u0442, \u044F\u043A\u0435 \u0432\u0438 \u0431\u0430\u0447\u0438\u0442\u0435 \u043D\u0430 \u043A\u0430\u0440\u0442\u0438\u043D\u0446\u0456:
+anonymous_room.label.have_no_messages = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u044C, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
+anonymous_room.label.leave_message    = \u0437\u0430\u043B\u0438\u0448\u0438\u0442\u0438 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
+anonymous_room.label.message          = \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F:
+anonymous_room.label.messages         = \u041F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
+anonymous_room.title                  = \u0410\u043D\u043E\u043D\u0456\u043C\u043D\u0430 \u043A\u0456\u043C\u043D\u0430\u0442\u0430
 
 # articles.jsp
 articles.label.articles_on_page = \u0441\u0442\u0430\u0442\u0435\u0439 \u043D\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u0446\u0456:
+articles.label.have_no_articles = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u0441\u0442\u0430\u0442\u0435\u0439, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
 articles.title                  = \u0421\u0442\u0430\u0442\u0442\u0456
 
 # displayArticle.jsp
-display_article.label.comment       = \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440:
-display_article.label.comments      = \u041A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456
-display_article.label.edit_article  = \u0440\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u044E
-display_article.label.keywords      = \u041A\u043B\u044E\u0447\u043E\u0432\u0456 \u0441\u043B\u043E\u0432\u0430
-display_article.label.leave_comment = \u0437\u0430\u043B\u0438\u0448\u0438\u0442\u0438 \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440
+display_article.label.comment          = \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440:
+display_article.label.comments         = \u041A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456
+display_article.label.edit_article     = \u0440\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u044E
+display_article.label.have_no_comments = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456\u0432, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
+display_article.label.keywords         = \u041A\u043B\u044E\u0447\u043E\u0432\u0456 \u0441\u043B\u043E\u0432\u0430
+display_article.label.leave_comment    = \u0437\u0430\u043B\u0438\u0448\u0438\u0442\u0438 \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440
 
 # editArticle.jsp
 edit_article.button.update_article              = \u043E\u0431\u043D\u043E\u0432\u0438\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u044E
@@ -76,8 +79,9 @@ header.link.sign_out         = \u0432\u0438\u0439\u0442\u0438
 header.link.sign_up          = \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
 
 # hubs.jsp
-hubs.label.description = \u043E\u043F\u0438\u0441
-hubs.title             = \u0425\u0430\u0431\u0438
+hubs.label.description  = \u043E\u043F\u0438\u0441
+hubs.label.have_no_hubs = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u0445\u0430\u0431\u0456\u0432, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
+hubs.title              = \u0425\u0430\u0431\u0438
 
 # index.jsp
 index.label.latest_news           = \u041E\u0441\u0442\u0430\u043D\u043D\u0456 \u043D\u043E\u0432\u0438\u043D\u0438
@@ -137,6 +141,7 @@ users.label.ban_expiration_date = \u0434\u0430\u0442\u0430 \u0437\u0430\u043A\u0
 users.label.ban_length          = \u0442\u0440\u0438\u0432\u0430\u043B\u0456\u0441\u0442\u044C \u0431\u0430\u043D\u0443 \u0432 \u0434\u043D\u044F\u0445:
 users.label.ban_reason          = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
 users.label.birthday            = \u0434\u0430\u0442\u0430 \u043D\u0430\u0440\u043E\u0434\u0436\u0435\u043D\u043D\u044F:
+users.label.have_no_users       = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
 users.label.last_login_time     = \u0447\u0430\u0441 \u043E\u0441\u0442\u0430\u043D\u044C\u043E\u0433\u043E \u0432\u0445\u043E\u0434\u0443:
 users.label.posted_articles     = \u043E\u043F\u0443\u0431\u043B\u0456\u043A\u043E\u0432\u0430\u043D\u0438\u0445 \u0441\u0442\u0430\u0442\u0435\u0439:
 users.label.posted_comments     = \u043E\u043F\u0443\u0431\u043B\u0456\u043A\u043E\u0432\u0430\u043D\u0438\u0445 \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456\u0432:
