Added missing comments.

--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -19,6 +19,7 @@ add_article.label.select_hub   = select a hub:
 add_article.label.title        = title:
 add_article.title              = Add an article
 
+# addHub.jsp
 add_hub.button.add_hub        = add a hub
 add_hub.hint.hub_type         = the hub can be public or personal. If it's public - anyone can add articles to it, if it's personal - only the author
 add_hub.label.hub_description = hub description:
