Fixed #43. Added the ability to pin news on the main page.

--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -35,6 +35,7 @@ add_news.label.news_importance              = news importance
 add_news.label.news_importance.intermediate = intermediate
 add_news.label.news_importance.major        = major
 add_news.label.news_importance.minor        = minor
+add_news.label.pinned                       = pinned (news is always displayed)
 add_news.label.title                        = title
 add_news.title                              = Add a News
 
