--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -35,6 +35,7 @@ add_news.label.news_importance              = \u0432\u0430\u0436\u043D\u043E\u04
 add_news.label.news_importance.intermediate = \u0441\u0440\u0435\u0434\u043D\u044F\u044F
 add_news.label.news_importance.major        = \u0437\u043D\u0430\u0447\u0438\u0442\u0435\u043B\u044C\u043D\u0430\u044F
 add_news.label.news_importance.minor        = \u043D\u0435\u0437\u043D\u0430\u0447\u0438\u0442\u0435\u043B\u044C\u043D\u0430\u044F
+add_news.label.pinned                       = \u043F\u0440\u0438\u043A\u0440\u0435\u043F\u043B\u0435\u043D\u043D\u0430\u044F (\u043D\u043E\u0432\u043E\u0441\u0442\u044C \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u0442\u0441\u044F \u0432\u0441\u0435 \u0432\u0440\u0435\u043C\u044F)
 add_news.label.title                        = \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 add_news.title                              = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C
 
