--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -30,15 +30,15 @@ add_hub.label.public_type     = public
 add_hub.title                 = Add a Hub
 
 # addNews.jsp
-add_news.button.add_news                    = add a news
-add_news.label.body                         = body
-add_news.label.news_importance              = news importance
-add_news.label.news_importance.intermediate = intermediate
-add_news.label.news_importance.major        = major
-add_news.label.news_importance.minor        = minor
-add_news.label.pinned                       = pinned (news is always displayed)
-add_news.label.title                        = title
-add_news.title                              = Add a News
+add_news.button.add_news              = add a news
+add_news.label.body                   = body
+add_news.label.news_importance        = news importance
+add_news.label.news_importance.high   = high
+add_news.label.news_importance.low    = low
+add_news.label.news_importance.middle = middle
+add_news.label.pinned                 = pinned (news is always displayed)
+add_news.label.title                  = title
+add_news.title                        = Add a News
 
 # anonymousRoom.jsp
 anonymous_room.label.author_name      = author's name:
