--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -30,15 +30,15 @@ add_hub.label.public_type     = \u043F\u0443\u0431\u043B\u0456\u0447\u043D\u0438
 add_hub.title                 = \u0414\u043E\u0434\u0430\u0442\u0438 \u0445\u0430\u0431
 
 # addNews.jsp
-add_news.button.add_news                    = \u0434\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
-add_news.label.body                         = \u0442\u0435\u043A\u0441\u0442
-add_news.label.news_importance              = \u0432\u0430\u0436\u043B\u0438\u0432\u0456\u0441\u0442\u044C \u043D\u043E\u0432\u0438\u043D\u0438
-add_news.label.news_importance.intermediate = \u0441\u0435\u0440\u0435\u0434\u043D\u044F
-add_news.label.news_importance.major        = \u0437\u043D\u0430\u0447\u043D\u0430
-add_news.label.news_importance.minor        = \u043D\u0435\u0437\u043D\u0430\u0447\u043D\u0430
-add_news.label.pinned                       = \u043F\u0440\u0438\u043A\u0440\u0456\u043F\u043B\u0435\u043D\u0430 (\u043D\u043E\u0432\u0438\u043D\u0430 \u0432\u0456\u0434\u043E\u0431\u0440\u0430\u0436\u0430\u0454\u0442\u044C\u0441\u044F \u0432\u0435\u0441\u044C \u0447\u0430\u0441)
-add_news.label.title                        = \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
-add_news.title                              = \u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
+add_news.button.add_news              = \u0434\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
+add_news.label.body                   = \u0442\u0435\u043A\u0441\u0442
+add_news.label.news_importance        = \u0432\u0430\u0436\u043B\u0438\u0432\u0456\u0441\u0442\u044C \u043D\u043E\u0432\u0438\u043D\u0438
+add_news.label.news_importance.high   = \u0432\u0438\u0441\u043E\u043A\u0430
+add_news.label.news_importance.low    = \u043D\u0438\u0437\u044C\u043A\u0430
+add_news.label.news_importance.middle = \u0441\u0435\u0440\u0435\u0434\u043D\u044F
+add_news.label.pinned                 = \u043F\u0440\u0438\u043A\u0440\u0456\u043F\u043B\u0435\u043D\u0430 (\u043D\u043E\u0432\u0438\u043D\u0430 \u0432\u0456\u0434\u043E\u0431\u0440\u0430\u0436\u0430\u0454\u0442\u044C\u0441\u044F \u0432\u0435\u0441\u044C \u0447\u0430\u0441)
+add_news.label.title                  = \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+add_news.title                        = \u0414\u043E\u0434\u0430\u0442\u0438 \u043D\u043E\u0432\u0438\u043D\u0443
 
 # anonymousRoom.jsp
 anonymous_room.label.author_name      = \u0456\u043C'\u044F \u0430\u0432\u0442\u043E\u0440\u0430:
