--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -153,3 +153,6 @@ users.label.registration_date   = registration date:
 users.label.role                = role:
 users.label.show_user_articles  = show user's articles
 users.title                     = Users
+
+# viewHub.jsp
+view_hub.label.have_no_articles = There are no articles yet, why not be the first.
