--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -153,3 +153,6 @@ users.label.registration_date   = \u0434\u0430\u0442\u0430 \u0440\u0435\u0433\u0
 users.label.role                = \u0440\u043E\u043B\u044C:
 users.label.show_user_articles  = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0441\u0442\u0430\u0442\u044C\u0438 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 users.title                     = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+
+# viewHub.jsp
+view_hub.label.have_no_articles = \u0417\u0434\u0435\u0441\u044C \u0435\u0449\u0435 \u043D\u0435\u0442 \u0441\u0442\u0430\u0442\u0435\u0439, \u043F\u043E\u0447\u0435\u043C\u0443 \u0431\u044B \u043D\u0435 \u0431\u044B\u0442\u044C \u043F\u0435\u0440\u0432\u044B\u043C.
