--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -153,3 +153,6 @@ users.label.registration_date   = \u0434\u0430\u0442\u0430 \u0440\u0435\u0454\u0
 users.label.role                = \u0440\u043E\u043B\u044C:
 users.label.show_user_articles  = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u0456 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 users.title                     = \u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+
+# viewHub.jsp
+view_hub.label.have_no_articles = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u0441\u0442\u0430\u0442\u0435\u0439, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
