--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -131,12 +131,24 @@ successful_registration.label.success = You was successfully registered. Please 
 successful_registration.title         = Successful Registration
 
 # user's ranks
-user.rank.blogger               = blogger
-user.rank.junior                = junior
-user.rank.old_fag               = old fag
-user.rank.provocateur           = provocateur
-user.rank.rookie                = rookie
-user.rank.troll                 = troll
+user.rank.blogger                      = blogger
+user.rank.junior                       = junior
+user.rank.old_fag                      = old fag
+user.rank.provocateur                  = provocateur
+user.rank.rookie                       = rookie
+user.rank.troll                        = troll
+
+# userProfile.jsp
+user_profile.label.articles            = Articles
+user_profile.label.ban_expiration_date = ban expiration date:
+user_profile.label.ban_reason          = the ban reason:
+user_profile.label.birthday            = birthday:
+user_profile.label.comments            = Comments
+user_profile.label.last_login_time     = last login time:
+user_profile.label.profile             = Profile
+user_profile.label.rank                = rank:
+user_profile.label.rating              = karma
+user_profile.label.registration_date   = registration date:
 
 # users.jsp
 users.label.ban_expiration_date = ban expiration date:
