--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -131,12 +131,24 @@ successful_registration.label.success = \u0412\u044B \u0431\u044B\u043B\u0438 \u
 successful_registration.title         = \u0423\u0441\u043F\u0435\u0448\u043D\u0430\u044F \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 
 # user's ranks
-user.rank.blogger               = \u0431\u043B\u043E\u0433\u0435\u0440
-user.rank.junior                = \u043D\u043E\u0432\u0438\u0447\u043E\u043A
-user.rank.old_fag               = \u0441\u0442\u0430\u0440\u044B\u0439 \u0447\u0435\u0440\u0442
-user.rank.provocateur           = \u043F\u0440\u043E\u0432\u043E\u043A\u0430\u0442\u043E\u0440
-user.rank.rookie                = \u043D\u043E\u0432\u043E\u0431\u0440\u0430\u043D\u0435\u0446
-user.rank.troll                 = \u0442\u0440\u043E\u043B\u044C
+user.rank.blogger                      = \u0431\u043B\u043E\u0433\u0435\u0440
+user.rank.junior                       = \u043D\u043E\u0432\u0438\u0447\u043E\u043A
+user.rank.old_fag                      = \u0441\u0442\u0430\u0440\u044B\u0439 \u0447\u0435\u0440\u0442
+user.rank.provocateur                  = \u043F\u0440\u043E\u0432\u043E\u043A\u0430\u0442\u043E\u0440
+user.rank.rookie                       = \u043D\u043E\u0432\u043E\u0431\u0440\u0430\u043D\u0435\u0446
+user.rank.troll                        = \u0442\u0440\u043E\u043B\u044C
+
+# userProfile.jsp
+user_profile.label.articles            = \u0421\u0442\u0430\u0442\u044C\u0438
+user_profile.label.ban_expiration_date = \u0434\u0430\u0442\u0430 \u0438\u0441\u0442\u0435\u0447\u0435\u043D\u0438\u044F \u0431\u0430\u043D\u0430:
+user_profile.label.ban_reason          = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
+user_profile.label.birthday            = \u0434\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F:
+user_profile.label.comments            = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438
+user_profile.label.last_login_time     = \u0432\u0440\u0435\u043C\u044F \u043F\u043E\u0441\u043B\u0435\u0434\u043D\u0435\u0433\u043E \u0432\u0445\u043E\u0434\u0430:
+user_profile.label.profile             = \u041F\u0440\u043E\u0444\u0438\u043B\u044C
+user_profile.label.rank                = \u0440\u0430\u043D\u0433:
+user_profile.label.rating              = \u043A\u0430\u0440\u043C\u0430
+user_profile.label.registration_date   = \u0434\u0430\u0442\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438:
 
 # users.jsp
 users.label.ban_expiration_date = \u0434\u0430\u0442\u0430 \u0438\u0441\u0442\u0435\u0447\u0435\u043D\u0438\u044F \u0431\u0430\u043D\u0430:
