--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -150,21 +150,11 @@ user_profile.label.rank                = rank:
 user_profile.label.rating              = karma
 user_profile.label.registration_date   = registration date:
 
-# users.jsp
-users.label.ban_expiration_date = ban expiration date:
-users.label.ban_length          = the length of the ban in days:
-users.label.ban_reason          = the ban reason:
-users.label.birthday            = birthday:
-users.label.have_no_users       = There are no users yet, why not be the first.
-users.label.last_login_time     = last login time:
-users.label.posted_articles     = posted articles:
-users.label.posted_comments     = posted comments:
-users.label.rank                = rank:
-users.label.rating              = karma:
-users.label.registration_date   = registration date:
-users.label.role                = role:
-users.label.show_user_articles  = show user's articles
-users.title                     = Users
+users.label.ban_length    = the length of the ban in days:
+users.label.ban_reason    = the ban reason:
+users.label.have_no_users = There are no users yet, why not be the first.
+users.label.rating        = karma
+users.title               = Users
 
 # viewHub.jsp
 view_hub.label.have_no_articles = There are no articles yet, why not be the first.
