--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -150,21 +150,11 @@ user_profile.label.rank                = \u0440\u0430\u043D\u0433:
 user_profile.label.rating              = \u043A\u0430\u0440\u043C\u0430
 user_profile.label.registration_date   = \u0434\u0430\u0442\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438:
 
-# users.jsp
-users.label.ban_expiration_date = \u0434\u0430\u0442\u0430 \u0438\u0441\u0442\u0435\u0447\u0435\u043D\u0438\u044F \u0431\u0430\u043D\u0430:
-users.label.ban_length          = \u0434\u043B\u0438\u043D\u0430 \u0431\u0430\u043D\u0430 \u0432 \u0434\u043D\u044F\u0445:
-users.label.ban_reason          = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
-users.label.birthday            = \u0434\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F:
-users.label.have_no_users       = \u0417\u0434\u0435\u0441\u044C \u0435\u0449\u0435 \u043D\u0435\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439, \u043F\u043E\u0447\u0435\u043C\u0443 \u0431\u044B \u043D\u0435 \u0431\u044B\u0442\u044C \u043F\u0435\u0440\u0432\u044B\u043C.
-users.label.last_login_time     = \u0432\u0440\u0435\u043C\u044F \u043F\u043E\u0441\u043B\u0435\u0434\u043D\u0435\u0433\u043E \u0432\u0445\u043E\u0434\u0430:
-users.label.posted_articles     = \u043E\u043F\u0443\u0431\u043B\u0438\u043A\u043E\u0432\u0430\u043D\u043D\u044B\u0445 \u0441\u0442\u0430\u0442\u0435\u0439:
-users.label.posted_comments     = \u043E\u043F\u0443\u0431\u043B\u0438\u043A\u043E\u0432\u0430\u043D\u043D\u044B\u0445 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0435\u0432:
-users.label.rank                = \u0440\u0430\u043D\u0433:
-users.label.rating              = \u043A\u0430\u0440\u043C\u0430:
-users.label.registration_date   = \u0434\u0430\u0442\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438:
-users.label.role                = \u0440\u043E\u043B\u044C:
-users.label.show_user_articles  = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0441\u0442\u0430\u0442\u044C\u0438 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
-users.title                     = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+users.label.ban_length    = \u0434\u043B\u0438\u043D\u0430 \u0431\u0430\u043D\u0430 \u0432 \u0434\u043D\u044F\u0445:
+users.label.ban_reason    = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
+users.label.have_no_users = \u0417\u0434\u0435\u0441\u044C \u0435\u0449\u0435 \u043D\u0435\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439, \u043F\u043E\u0447\u0435\u043C\u0443 \u0431\u044B \u043D\u0435 \u0431\u044B\u0442\u044C \u043F\u0435\u0440\u0432\u044B\u043C.
+users.label.rating        = \u043A\u0430\u0440\u043C\u0430
+users.title               = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 
 # viewHub.jsp
 view_hub.label.have_no_articles = \u0417\u0434\u0435\u0441\u044C \u0435\u0449\u0435 \u043D\u0435\u0442 \u0441\u0442\u0430\u0442\u0435\u0439, \u043F\u043E\u0447\u0435\u043C\u0443 \u0431\u044B \u043D\u0435 \u0431\u044B\u0442\u044C \u043F\u0435\u0440\u0432\u044B\u043C.
