--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -150,21 +150,11 @@ user_profile.label.rank                = \u0440\u0430\u043D\u0433:
 user_profile.label.rating              = \u043A\u0430\u0440\u043C\u0430
 user_profile.label.registration_date   = \u0434\u0430\u0442\u0430 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u0457:
 
-# users.jsp
-users.label.ban_expiration_date = \u0434\u0430\u0442\u0430 \u0437\u0430\u043A\u0456\u043D\u0447\u0435\u043D\u043D\u044F \u0431\u0430\u043D\u0443:
-users.label.ban_length          = \u0442\u0440\u0438\u0432\u0430\u043B\u0456\u0441\u0442\u044C \u0431\u0430\u043D\u0443 \u0432 \u0434\u043D\u044F\u0445:
-users.label.ban_reason          = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
-users.label.birthday            = \u0434\u0430\u0442\u0430 \u043D\u0430\u0440\u043E\u0434\u0436\u0435\u043D\u043D\u044F:
-users.label.have_no_users       = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
-users.label.last_login_time     = \u0447\u0430\u0441 \u043E\u0441\u0442\u0430\u043D\u044C\u043E\u0433\u043E \u0432\u0445\u043E\u0434\u0443:
-users.label.posted_articles     = \u043E\u043F\u0443\u0431\u043B\u0456\u043A\u043E\u0432\u0430\u043D\u0438\u0445 \u0441\u0442\u0430\u0442\u0435\u0439:
-users.label.posted_comments     = \u043E\u043F\u0443\u0431\u043B\u0456\u043A\u043E\u0432\u0430\u043D\u0438\u0445 \u043A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456\u0432:
-users.label.rank                = \u0440\u0430\u043D\u0433:
-users.label.rating              = \u043A\u0430\u0440\u043C\u0430:
-users.label.registration_date   = \u0434\u0430\u0442\u0430 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u0457:
-users.label.role                = \u0440\u043E\u043B\u044C:
-users.label.show_user_articles  = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u0438 \u0441\u0442\u0430\u0442\u0442\u0456 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
-users.title                     = \u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+users.label.ban_length    = \u0442\u0440\u0438\u0432\u0430\u043B\u0456\u0441\u0442\u044C \u0431\u0430\u043D\u0443 \u0432 \u0434\u043D\u044F\u0445:
+users.label.ban_reason    = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
+users.label.have_no_users = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
+users.label.rating        = \u043A\u0430\u0440\u043C\u0430
+users.title               = \u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 
 # viewHub.jsp
 view_hub.label.have_no_articles = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u0441\u0442\u0430\u0442\u0435\u0439, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
