Fixed #54. Added the ability to see the user's latest article.

--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
@@ -156,6 +156,7 @@ users.label.ban_length         = the length of the ban in days:
 users.label.ban_reason         = the ban reason:
 users.label.experience_in_days = days on the site:
 users.label.have_no_users      = There are no users yet, why not be the first.
+users.label.latest_article     = latest article:
 users.label.rating             = karma
 users.title                    = Users
 
