--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -156,6 +156,7 @@ users.label.ban_length         = \u0442\u0440\u0438\u0432\u0430\u043B\u0456\u044
 users.label.ban_reason         = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
 users.label.experience_in_days = \u0434\u043D\u0456\u0432 \u043D\u0430 \u0441\u0430\u0439\u0442\u0456:
 users.label.have_no_users      = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
+users.label.latest_article     = \u043E\u0441\u0442\u0430\u043D\u043D\u044F \u0441\u0442\u0430\u0442\u0442\u044F:
 users.label.rating             = \u043A\u0430\u0440\u043C\u0430
 users.title                    = \u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 
