--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -156,6 +156,7 @@ users.label.ban_length         = \u0434\u043B\u0438\u043D\u0430 \u0431\u0430\u04
 users.label.ban_reason         = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
 users.label.experience_in_days = \u0434\u043D\u0435\u0439 \u043D\u0430 \u0441\u0430\u0439\u0442\u0435:
 users.label.have_no_users      = \u0417\u0434\u0435\u0441\u044C \u0435\u0449\u0435 \u043D\u0435\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439, \u043F\u043E\u0447\u0435\u043C\u0443 \u0431\u044B \u043D\u0435 \u0431\u044B\u0442\u044C \u043F\u0435\u0440\u0432\u044B\u043C.
+users.label.latest_article     = \u043F\u043E\u0441\u043B\u0435\u0434\u043D\u044F\u044F \u0441\u0442\u0430\u0442\u044C\u044F:
 users.label.rating             = \u043A\u0430\u0440\u043C\u0430
 users.title                    = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 
